<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/text_welcome"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_subtitle"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_login_text"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:layout_below="@id/text_login_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_login_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_username"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_user" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/editText_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/edittext_username" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_pass" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_input_layout1"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editText_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/edittext_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_send"
        app:fabCustomSize="70dp" />

    <TextView
        android:id="@+id/text_signUpAppeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/text_appeal_signup"
        android:textSize="16sp" />

</RelativeLayout>