<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">

    <TextView
        android:id="@+id/title_add_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_car_title"
        android:textSize="18sp"
        android:layout_margin="14dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_add_car"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:padding="2dp"
        android:layout_below="@id/title_add_car"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_addcar_vehicle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edittext_addcar_vehicle_name"
                android:inputType="text"
                android:maxLength="10"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_addcar_vehicle_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edittext_addcar_vehicle_number"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_addcar_vehicle_empty_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/edittext_addcar_empty_seat"
                android:inputType="number"
                android:maxLength="1"/>

        </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/addCarButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/buttton_shape"
            android:text="Add Car"
            android:textColor="#FFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/skipCarButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttton_shape"
            android:text="Skip"
            android:textColor="#FFF"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            />

    </LinearLayout>

</RelativeLayout>