<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".SignupActivity">

        <View
            android:id="@+id/view_signup_text"
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_signup_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/signup_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_text"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_name" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editText_signup_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/signup_edittext_name"
                        android:inputType="text"
                        android:textColor="#FFF" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout1"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_username"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_user" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_layout1">

                    <EditText
                        android:id="@+id/editText_signup_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/signup_edittext_username"
                        android:inputType="text"
                        android:textColor="#FFF" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_password"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_pass" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_layout2"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/editText_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/signup_edittext_password"
                        android:inputType="textPassword"
                        android:textColor="#FFF" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout3"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_layout3">

                    <EditText
                        android:id="@+id/editText_signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/signup_edittext_email"
                        android:inputType="text"
                        android:textColor="#FFF" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout4"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_gender"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_gender" />


                <TextView
                    android:id="@+id/edittext_signup_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Gender"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout5"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_phoneno"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/ic_phoneno" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image_gender">

                    <EditText
                        android:id="@+id/editText_signup_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/signup_edittext_phoneno"
                        android:inputType="number"
                        android:textColor="#FFF" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_send"
            app:fabCustomSize="70dp" />

    </RelativeLayout>
</ScrollView>